# simpliibarrii-crypto

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BLOG_POST.md  BRAND_BANNERS.md  BRAND_SYSTEM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  HUGGINGFACE_PROFILE.md  INSTALLATION_AND_SETUP.md  LICENSE  MAINTAINERS.md  Makefile  ONE_PAGER.md  PROJECTS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VIDEO_SCRIPT.md  appspec.json  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  runtime-taste-audit.yml  stale.yml
assets/: svg-resources.js
