[project]
name = "raven-ai"
version = "0.1.0"
description = "Your intelligence layer — sovereign, local-first AI orchestration"
authors = [{name = "Brian Clerjuste", email = "bclerjuste@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "black>=24",
    "pre-commit>=3",
    "build>=1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["raven_ai*"]
